[project]
name = "ricardoneud-api"
version = "1.2.0"
description = "Official Python SDK for the API from Ricardoneud.com"
authors = [
  { name = "Ricardoneud.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "requests>=2.25.0"
]

[project.urls]
Homepage = "https://ricardoneud.com"
Contact = "https://ricardoneud.com/contact"

[build-system]
requires = ["setuptools>=42", "wheel", "build", "twine"]
build-backend = "setuptools.build_meta"
